--- a/requirements.txt
+++ b/requirements.txt
@@ -37,9 +37,9 @@ rich==13.7.1
 scikit-learn==1.5.1
 scipy==1.14.0
 six==1.16.0
-tensorboard==2.11.0
+tensorboard==2.17.0
 tensorboard-data-server==0.7.2
-tensorflow==2.11.0
+tensorflow
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.5.0
